--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "firebase-admin": "^9.10.0",
     "firebase-functions": "^3.14.1"
   },
-  "name": "facialrecog",
+  "name": "v8engine",
   "description": "About Kevin and his beloved AI\r <p><a href=\"https://kevstar0.io/dedicated/admin-panel.html\"/></p>",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "package.json",
   "scripts": {
     "test": "kevstar"
@@ -24,5 +24,6 @@
   "bugs": {
     "url": "https://github.com/kevstar0/kevstar0.github.io/issues"
   },
-  "homepage": "https://github.com/kevstar0/kevstar0.github.io#readme"
+  "homepage": "https://github.com/kevstar0/kevstar0.github.io#readme",
+  "devDependencies": {}
 }
