--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "5g": "^1.0.1",
     "express": "^4.17.1",
     "firebase": "^8.7.1",
     "firebaseui": "^4.8.1",
@@ -28,3 +29,42 @@
   },
   "homepage": "https://github.com/kevstar0/kevstar0.github.io#readme"
 }
+
+// Firebase App (the core Firebase SDK) is always required and must be listed first
+import firebase from "firebase/app";
+// If you are using v7 or any earlier version of the JS SDK, you should import firebase using namespace import
+// import * as firebase from "firebase/app"
+
+// If you enabled Analytics in your project, add the Firebase SDK for Analytics
+import "firebase/analytics";
+
+// Add the Firebase products that you want to use
+import "firebase/auth";
+import "firebase/firestore";
+
+// TODO: Replace the following with your app's Firebase project configuration
+// For Firebase JavaScript SDK v7.20.0 and later, `measurementId` is an optional field
+const firebaseConfig = {
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+  apiKey: "AIzaSyA6XmqP76EBAG1XHZhtbJn6lDDagYH14xI",
+  authDomain: "aqueous-encoder-301807.firebaseapp.com",
+  databaseURL: "https://aqueous-encoder-301807-default-rtdb.firebaseio.com",
+  projectId: "aqueous-encoder-301807",
+  storageBucket: "aqueous-encoder-301807.appspot.com",
+  messagingSenderId: "1012545270359",
+  appId: "1:1012545270359:web:2f1eaf15ac45e14312e912",
+  measurementId: "G-HKQ1DCN73M"
+};
+};
+
+// Initialize Firebase
+firebase.initializeApp(firebaseConfig);
+
+import var {username}
+
+document.getElementById("login-btn").addEventListener("login", #firebase);
+element.addEventListener("login", function(){ alert("Welcome to Mobile fly!"); });
+
+# prevent mime based attacks
+Header set X-Content-Type-Options "nosniff"
