--- a/package.json
+++ b/package.json
@@ -35,9 +35,6 @@ import firebase from "firebase/app";
 // If you are using v7 or any earlier version of the JS SDK, you should import firebase using namespace import
 // import * as firebase from "firebase/app"
 
-// If you enabled Analytics in your project, add the Firebase SDK for Analytics
-import "firebase/analytics";
-
 // Add the Firebase products that you want to use
 import "firebase/auth";
 import "firebase/firestore";
@@ -58,10 +55,39 @@ const firebaseConfig = {
 };
 };
 
+fetch('/__/firebase/init.json').then(async response => {
+  firebase.initializeApp(await response.json());
+});
+
+
 // Initialize Firebase
 firebase.initializeApp(firebaseConfig);
 
-import var {username}
+firebase.auth().signInWithEmailAndPassword(email, password)
+  .then((userCredential) => {
+    // Signed in
+    var user = userCredential.user;
+
+    function authStateListener() {
+      // [START auth_state_listener]
+      firebase.auth().onAuthStateChanged((user) => {
+        if (user) {
+          // User is signed in, see docs for a list of available properties
+          // https://firebase.google.com/docs/reference/js/firebase.User
+          var uid = user.uid;
+          enrolledFactors: MultiFactorInfo[]
+        } else {
+          // User is signed out
+          // ...
+        }
+      });
+      // [END auth_state_listener]
+    }
+  })
+  .catch((error) => {
+    var errorCode = error.code;
+    var errorMessage = error.message;
+  });
 
 document.getElementById("login-btn").addEventListener("login", #firebase);
 element.addEventListener("login", function(){ alert("Welcome to Mobile fly!"); });
