--- a/protonvpn/ProtonVPN.exe.config
+++ b/protonvpn/ProtonVPN.exe.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -308,7 +308,7 @@
         <value>1</value>
       </setting>
       <setting name="UseTunAdapter" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="PortForwardingEnabled" serializeAs="String">
         <value>False</value>
@@ -324,6 +324,27 @@
       </setting>
       <setting name="UserDoNotShowKillSwitchConfirmationDialog" serializeAs="String">
         <value />
+      </setting>
+      <setting name="UserDoNotShowEnableSmartProtocolDialog" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="VpnAcceleratorEnabled" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="FeatureVpnAcceleratorEnabled" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="FeatureStreamingServicesLogosEnabled" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="FeatureSmartReconnectEnabled" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="SmartReconnectEnabled" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="SmartReconnectNotificationsEnabled" serializeAs="String">
+        <value>False</value>
       </setting>
     </ProtonVPN.Properties.Settings>
   </userSettings>
@@ -358,6 +379,16 @@
       <dependentAssembly>
         <assemblyIdentity name="PInvoke.Windows.Core" publicKeyToken="9e300f9f87f04a7a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-0.6.0.0" newVersion="0.6.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Windows.Interactivity" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
