--- a/Welcome portal/packages.config
+++ b/Welcome portal/packages.config
@@ -15,6 +15,7 @@
   <package id="Microsoft.AspNet.ScriptManager.WebForms" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization.WebForms" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net472" />
@@ -26,8 +27,10 @@
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Twitter" version="4.0.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
+  <package id="WindowsAzure.Storage" version="9.1.1" targetFramework="net472" />
 </packages>
